# mesh-shortest-paths-cgal-bindings

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  build.rs  flake.nix  shell.nix
cpp/: cgal_sp.cpp  cgal_sp.h
src/: ffi.rs  interpretation.rs  lib.rs  main.rs  types.rs
tests/: basic.rs  common.rs  compat.rs  events.rs  flat_grid.rs  grid.rs
