[package]
name = "rust_cgal_shortest_paths"
version = "0.1.0"
edition = "2024"
license = "MIT-0"
readme = "README.md"

[lib]
name = "rust_cgal_shortest_paths"
path = "src/lib.rs"

[[bin]]
name = "rust_cgal_shortest_paths_bin"
path = "src/main.rs"

[dependencies]


[build-dependencies]
bindgen = "0.70"
cc = "1.0"
pkg-config = "0.3"